Fixed layout issues

--- a/app/static/content/site.css
+++ b/app/static/content/site.css
@@ -46,6 +46,7 @@
     justify-content: center;
     align-items: center;
     height: 100%;
+    z-index: 1;
 }
 
 .overlay {
@@ -64,11 +65,11 @@
     width: 60%;
 }
   
-.overlay-content{
+.overlay-content {
     position: absolute;
-    top: 80%;
+    top: 50%;
     left: 50%;
     color: white;
-    transform: translate(-50%,-80%);
-    -ms-transform: translate(-50%,-80%);
+    transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
 }
